--- a/SleepManager/SleepManager.csproj
+++ b/SleepManager/SleepManager.csproj
@@ -47,6 +47,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_SharedAssemblyInfo.cs">
+      <Link>Properties\_SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ServerInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -60,7 +63,6 @@
       <DependentUpon>SleepService.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
