--- a/SleepManagerInstaller/SleepManagerInstaller.csproj
+++ b/SleepManagerInstaller/SleepManagerInstaller.csproj
@@ -58,8 +58,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_SharedAssemblyInfo.cs">
+      <Link>Properties\_SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
