--- a/UnitTestProject1/UnitTestProject1.csproj
+++ b/UnitTestProject1/UnitTestProject1.csproj
@@ -53,8 +53,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="..\_SharedAssemblyInfo.cs">
+      <Link>Properties\_SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="UnitTest1.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SleepManager.Core\SleepManager.Core.csproj">
