--- a/SleepManager.Core/SleepManager.Core.csproj
+++ b/SleepManager.Core/SleepManager.Core.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\_SharedAssemblyInfo.cs">
+      <Link>Properties\_SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="DateTimeProvider.cs" />
     <Compile Include="IDateTimeProvider.cs" />
     <Compile Include="Native\IntPtrExtensions.cs" />
@@ -45,7 +48,6 @@
     <Compile Include="Native\LSAPolicy.cs" />
     <Compile Include="Native\LSAStringMarshaler.cs" />
     <Compile Include="Native\LSA_UNICODE_STRING.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
