--- a/SleepManager/SleepManager.csproj
+++ b/SleepManager/SleepManager.csproj
@@ -87,6 +87,9 @@
       <DependentUpon>ServerInstaller.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SleepService.resx">
+      <DependentUpon>SleepService.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
